test/functions/diten/unresolvedWhere2.good
unresolvedWhere2.chpl:3: error: unresolved call 'foo("bar")'
unresolvedWhere2.chpl:1: note: candidates are: foo(x) where isIntegral(x)&&!isReal(x)
unresolvedWhere2.chpl:2: note:                 foo(x) where isReal(x)
