test/functions/diten/unresolvedWhere2.chpl
proc foo(x) where isIntegral(x) && !isReal(x) { }
proc foo(x) where isReal(x) { }
foo("bar");
